--- a/helloworld_deploy.yaml
+++ b/helloworld_deploy.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: hello-world
   annotations:
-    # Container Image Automated Updates
+    # Container Image Automated Update
     flux.weave.works/automated: "true"
     # do not apply this manifest on the cluster
     #flux.weave.works/ignore: "true"
